cloudformation/vpc.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: "This is a simple vpc structure for an application for the Sydney region, with a single VPC and three subnets"
Parameters:
  ApplicationName:
    Type: String
    Default: "Test"
    Description: "Name of the application that the VPC structure will be set up for. It will be pre-fixed to the beginning of the each resources for identification"
  CostCode:
    Type: String
    Default: "12345"
    Description: "Identifier for billing purposes"
Resources:
  NewVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - " "
          - - Ref: ApplicationName
            - VPC
  SubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: NewVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "ap-southeast-2a"
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - " "
          - - Ref: ApplicationName
            - VPC 10.0.1.0/24 ap-southeast-2a
  SubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: NewVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "ap-southeast-2b"
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - " "
          - - Ref: ApplicationName
            - VPC 10.0.2.0/24 ap-southeast-2b
  SubnetThree:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: NewVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: "ap-southeast-2c"
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - " "
          - - Ref: ApplicationName
            - VPC 10.0.3.0/24 ap-southeast-2c
  IAMRole:
    Type: "AWS::IAM::Role"
    Properties: 
      RoleName: 
        Fn::Join:
        - " "
        - - Ref : ApplicationName
          - Ref : AWS::Region 
          - Role
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
      Policies: 
        - 
          PolicyName: 
            Fn::Join:
            - " "
            - - Ref: ApplicationName
              - Policy
          PolicyDocument: 
            Version: "2012-10-17"
            Statement: 
              - 
                Effect: "Allow"
                Action: "*"
                Resource: "*"
  InstanceProfile: 
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      Path: "/"
      Roles: 
        - 
          Ref: "IAMRole"
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
        Ref: NewVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '8080'
        ToPort: '8080'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0s
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - " "
          - - Ref: ApplicationName
            - SG
